--- a/Service/templates/service/microservice/index.html
+++ b/Service/templates/service/microservice/index.html
@@ -17,9 +17,11 @@
     <header class="bg-white px-4">
         <div class="flex items-center max-w-[1055px] m-auto">
             {% for category in categories %}
-
-                <div data-tab="tab-{{ category.id }}"
-                     class="text-gray-1 font-medium py-[14px] mr-5 cursor-pointer tab-head ">{{ category }}</div>
+                {% if category.groups.services %}
+                    <div data-tab="tab-{{ category.id }}"
+                         class="text-gray-1 font-medium py-[14px] mr-5 cursor-pointer tab-head">{{ category }}
+                    </div>
+                {% endif %}
             {% endfor %}
         </div>
     </header>
@@ -37,10 +39,7 @@
                                 <div class="mb-2 font-medium 768:mb-6 768:text-xl">{{ group.name }}</div>
                                 <div class="768:grid 768:grid-cols-2 768:gap-4 1024:grid-cols-3">
 
-
                                     {% for service in group.services.all %}
-
-
                                         <a href="{{ service.url }}" target="_blank"
                                            class="flex items-center justify-between p-2 bg-gray-2 rounded-xl mb-1.5 last:mb-0  768:mb-0">
                                             <div class="flex items-center mb-1.5">
