--- a/templates/service/microservice/index.html
+++ b/templates/service/microservice/index.html
@@ -12,7 +12,7 @@
     <script src="{% static 'service/js/tailwind.config.js' %}"></script>
 </head>
 
-<body class="bg-gray-3">
+<body class="bg-[#E5E5E5]">
 <div class="">
     <header class="bg-white px-4 sticky top-0 shadow-[0_1px_3px_rgba(0,0,0,0.12)] relative">
         <div class="max-w-[1000px] m-auto flex items-center justify-between ">
