index.html changes

--- a/templates/service/microservice/index.html
+++ b/templates/service/microservice/index.html
@@ -6,8 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TM Dash</title>
     <link rel="stylesheet" href="{% static 'service/css/style.css' %}">
+    <link rel="icon" type="image/x-icon" href="https://texnomart.uz/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="{% static 'service/js/tailwind.config.js' %}"></script>
 </head>
